--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
       <img src="ICWT Images/customer.jpg" style="width:100%">
-      <div class="mayras-test">"ICWT always does pop ups at my high school! Everyone loves their pizza so much that the long but worth it! They're so nice even pass out mini slices to the line."-Mayra Lourene</div>
+      <div class="mayras-test">"ICWT always does pop ups at my high school! Everyone loves their pizza so much that the line is long but worth it! They're so nice, they even pass out mini slices to the line."-Mayra Lourene</div>
 </div>
 
 <div>      
